Mon Dec 18 17:29:53 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: renamed '-x generic' option as '-x explore'

Thu Dec 14 19:16:25 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - data/driver.list: added two model numbers for the "belkin" driver. 

Thu Dec 14 19:00:30 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - bcmxcp.c: fixed "&&" vs. "&" issue (bug 304249, reported by Arjen de Korte).

Wed Dec 13 01:40:11 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - driver.list: models supported by megatec and another driver are now
   listed as supported by megatec only
 - mustek, blazer, fentonups, esupssmart, sms, ippon: added message about
   the driver being obsolete and planned for removal
 - mustek, fentonups, sms, ippon: modified manpages stating that the driver
   is obsolete and planned for removal

Sat Dec  9 01:36:14 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups/hotplug: added productid for Belkin F6C1500-TW-RK (050d/0751)

Tue Dec  5 21:20:15 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsmon.c: added -f command line option to allow specifying a
   non-default location of the upsmon.conf file

Mon Dec  4 21:36:33 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec: simplified UPS detection to support models that don't report
   their ratings, reworked battery parameters detection code, added a couple
   of extra commands (watchdog, beeper) and variables (ondelay, offdelay)
 - data/driver.list: models supported by esupssmart, blazer, fentonups,
   mustek, ippon and sms are now listed as being supported by megatec also

Mon Dec  4 20:04:52 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - drivers/main.c: set progname before calling upsdrv_banner()

Mon Dec  4 19:55:37 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - dummy-ups: allow absolute path names for the configuration file
